<resources>
    <string name="app_name">AndroidMaster</string>

    <!--IMC APP-->
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Re-Calcular</string>
    <string name="result">Tu resultado</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>

    <!--TodoApp-->
    <string name="todo_title">Bienvenido, Macc</string>
    <string name="todo_categories">Categorías:</string>
    <string name="todo_tasks">Tareas:</string>

    <string name="todo_dialog_add_task">Añade la tarea</string>
    <string name="todo_dialog_category_business">Negocios</string>
    <string name="todo_dialog_category_other">Otros</string>
    <string name="todo_dialog_category_personal">Personal</string>
    <string name="todo_dialog_add_task_button">Crear tarea</string>

    <!-- DESCUENTOS APP-->
    <string name="porcentaje_bonificacion">Porcentaje Bonificacion</string>
    <string name="ieps">IEPS</string>
    <string name="iva">IVA</string>
    <string name="cantidad">Cantidad</string>
    <string name="precio_unitario">Precio Unitario</string>
    <string name="calcular_descuentos">CALCULAR DESCUENTOS</string>
    <string name="calcular">CALCULAR</string>
    <string name="bonificacion_total">Bonif. Total:</string>
    <string name="total">total:</string>
    <string name="importe">importe:</string>
    <string name="bonificacion_importe">Bonif. Importe:</string>
    <string name="iva_txt">IVA:</string>
    <string name="ieps_txt">IEPS:</string>
    <string name="descuento_iva">Bonif. IVA:</string>
    <string name="descuento_ieps">Bonif. IEPS:</string>
    <string name="resultado">Resultado:</string>
    <string name="iva_con_descuento">Iva con descuento:</string>
    <string name="ieps_con_descuento">Ieps con descuento:</string>

    <!-- MENU BOTONES -->
    <string name="saludapp">Saludo App</string>
    <string name="imc_app">IMC App</string>
    <string name="todo_app">TO-DO App</string>
    <string name="superhero_app">SuperHeroe App</string>
    <string name="settings">AJUSTES</string>
    <string name="calcular_descuentos1">CALCULAR DESCUENTOS</string>
    <string name="conversor_de_temperatura">CONVERSOR DE TEMPERATURA</string>


    <!-- TEMPERATURA APP -->
    <string name="conversor_de_temperaturas">CONVERSOR DE TEMPERATURAS</string>
    <string name="convertir">CONVERTIR</string>
    <string-array name="spinner_items_temp">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>



</resources>