<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnSaludApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saludapp"/>

    <Button
        android:id="@+id/btnIMCApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/imc_app"/>

    <Button
        android:id="@+id/btnTODO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_app"/>

    <Button
        android:id="@+id/btnSuperhero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/superhero_app"/>

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"/>

    <Button
        android:id="@+id/btnDescuentos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular_descuentos1"/>

    <Button
        android:id="@+id/btnTemperatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conversor_de_temperatura"/>


</LinearLayout>